--- a/blog/blog_app/templates/base.html
+++ b/blog/blog_app/templates/base.html
@@ -47,25 +47,25 @@
 
     <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-        <a class="p-2 link-secondary" href="#">Мир</a>
-        <a class="p-2 link-secondary" href="#">Украина</a>
-        <a class="p-2 link-secondary" href="#">Технологии</a>
-        <a class="p-2 link-secondary" href="#">Дизайн</a>
-        <a class="p-2 link-secondary" href="#">Культура</a>
-        <a class="p-2 link-secondary" href="#">Бизнес</a>
-        <a class="p-2 link-secondary" href="#">Наука</a>
-        <a class="p-2 link-secondary" href="#">Здоровье</a>
-        <a class="p-2 link-secondary" href="#">Стиль</a>
-        <a class="p-2 link-secondary" href="#">Путешествия</a>
-        <a class="p-2 link-secondary" href="#">Разное</a>
+        <a class="p-2 link-secondary" href="#">World</a>
+        <a class="p-2 link-secondary" href="#">Ukraine</a>
+        <a class="p-2 link-secondary" href="#">Technology</a>
+        <a class="p-2 link-secondary" href="#">Design</a>
+        <a class="p-2 link-secondary" href="#">Culture</a>
+        <a class="p-2 link-secondary" href="#">Business</a>
+        <a class="p-2 link-secondary" href="#">Science</a>
+        <a class="p-2 link-secondary" href="#">Health</a>
+        <a class="p-2 link-secondary" href="#">Style</a>
+        <a class="p-2 link-secondary" href="#">Travel</a>
+        <a class="p-2 link-secondary" href="#">Something</a>
     </nav>
   </div>
 
-</div>
+    {% block content %}
+        <h1>There is no any content now</h1>
+    {% endblock%}
 
-{% block content %}
-    <h1>There is no any content now</h1>
-{% endblock%}
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
