--- a/blog/blog_app/templates/post/list_post.html
+++ b/blog/blog_app/templates/post/list_post.html
@@ -1,64 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div>
     <main class="container">
-  <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
-    <div class="col-md-6 px-0">
-      <h1 class="display-4 fst-italic">{{ important.title }}</h1>
-      <p class="lead my-3">{{ important.body|truncatewords:15}}</p>
-      <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
-    </div>
-  </div>
-
-  <div class="row mb-2">
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-primary">Мир</strong>
-          <h3 class="mb-0">{{ last_world_post.title }}</h3>
-          <div class="mb-1 text-muted">{{ last_world_post.published_date }}</div>
-          <p class="card-text mb-auto">{{ last_world_post.body|truncatewords:8 }}</p>
-          <a href="#" class="stretched-link">Continue reading</a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Технологии</strong>
-          <h3 class="mb-0">{{ last_tech_post.title }}</h3>
-          <div class="mb-1 text-muted">{{ last_tech_post.published_date }}</div>
-          <p class="mb-auto">{{ last_tech_post.body|truncatewords:8 }}</p>
-          <a href="#" class="stretched-link">Continue reading</a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-        </div>
-      </div>
-    </div>
-  </div>
+      {% include 'post/important_post.html' %}
 
   <div class="row">
     <div class="col-md-8">
       <h3 class="pb-4 mb-4 fst-italic border-bottom">
         Лента
       </h3>
-
-      {% for post in posts %}
-        <article class="blog-post">
-          <h2 class="blog-post-title">{{ post.title }}</h2>
-          <p class="blog-post-meta">{{ post.published_date }} <a href="#">{{ post.author }}</a></p>
-          <p>{{ post.body }}</p>
-        </article>
-      {% empty %}
-        asas
-      {% endfor %}
+        {% include 'post/posts.html' %}
 
       <nav class="blog-pagination" aria-label="Pagination">
         <a class="btn btn-outline-primary" href="#">Older</a>
@@ -101,8 +53,8 @@
       </div>
     </div>
 
-  </div><!-- /.row -->
+  </div>
 
-</main><!-- /.container -->
+</main>
 </div>
 {% endblock %}
