--- a/blog/blog_app/templates/post/posts.html
+++ b/blog/blog_app/templates/post/posts.html
@@ -1,9 +1,10 @@
 {% for post in posts %}
     <article class="blog-post">
         <h2 class="blog-post-title">{{ post.title }}</h2>
-        <p class="blog-post-meta">{{ post.published_date }} <a href="#">{{ post.author }}</a></p>
+        <p class="blog-post-meta">{{ post.published_date }} <a href="#">{{ post.author }}</a> in {{post.category}}</p>
         <p>{{ post.body }}</p>
     </article>
+<hr>
 {% empty %}
     <p>There is not any posts yet.</p>
 {% endfor %}
