--- a/blog/blog_app/templates/base.html
+++ b/blog/blog_app/templates/base.html
@@ -34,7 +34,7 @@
         Vladislav
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Blog</a>
+        <a class="blog-header-logo text-dark" href="{% url 'blog_app:list_view' %}">Blog</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <a class="link-secondary" href="#" aria-label="Search">
@@ -47,17 +47,9 @@
 
     <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-        <a class="p-2 link-secondary" href="#">World</a>
-        <a class="p-2 link-secondary" href="#">Ukraine</a>
-        <a class="p-2 link-secondary" href="#">Technology</a>
-        <a class="p-2 link-secondary" href="#">Design</a>
-        <a class="p-2 link-secondary" href="#">Culture</a>
-        <a class="p-2 link-secondary" href="#">Business</a>
-        <a class="p-2 link-secondary" href="#">Science</a>
-        <a class="p-2 link-secondary" href="#">Health</a>
-        <a class="p-2 link-secondary" href="#">Style</a>
-        <a class="p-2 link-secondary" href="#">Travel</a>
-        <a class="p-2 link-secondary" href="#">Something</a>
+        {% for category in categories %}
+            <a class="p-2 link-secondary" href="{% url 'blog_app:list_category_view' category.pk %}">{{ category }}</a>
+        {% endfor %}
     </nav>
   </div>
 
