--- a/blog/blog_app/templates/base.html
+++ b/blog/blog_app/templates/base.html
@@ -23,7 +23,7 @@
       }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'blog.css' %}">
+    <link rel="stylesheet" href="{% static 'blog_app/css/blog.css' %}">
 </head>
 
 <body>
@@ -41,9 +41,9 @@
       <div class="col-4 d-flex justify-content-end align-items-center">
           {% if user.is_authenticated %}
             <a class="link-secondary" href="" style="margin-right: 20px;">{{ user }}  </a>
-            <a class="btn btn-sm btn-outline-secondary" href="#">Sign out</a>
+            <a class="btn btn-sm btn-outline-secondary" href="{% url 'user_app:logout_view' %}">Sign out</a>
           {% else %}
-            <a class="btn btn-sm btn-outline-secondary" href="#">Sign in</a>
+            <a class="btn btn-sm btn-outline-secondary" href="{% url 'user_app:login_view' %}">Sign in</a>
           {% endif %}
       </div>
     </div>
