Improve template structure

--- a/blog/user_app/templates/registration/registration.html
+++ b/blog/user_app/templates/registration/registration.html
@@ -1,6 +1,6 @@
 {% extends 'registration/user_form_base.html' %}
 
-{% block title %}Sign In{% endblock %}
+{% block title %}Registration{% endblock %}
 {% block content %}
     <main class="form-signin">
         <form method="post">
