--- a/blog/user_app/templates/registration/login.html
+++ b/blog/user_app/templates/registration/login.html
@@ -7,7 +7,7 @@
             {% csrf_token %}
             <!--    <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
 
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 fw-normal">Авторизация</h1>
             {% if error %}
                 <h4 class="h4 mb-3">{{error}}</h4>
             {% endif %}
