--- a/blog/user_app/templates/registration/registration.html
+++ b/blog/user_app/templates/registration/registration.html
@@ -2,35 +2,81 @@
 
 {% block title %}Registration{% endblock %}
 {% block content %}
-    <main class="form-signin">
-        <form method="post">
-            {% csrf_token %}
-            <!--    <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
+<main class="form-register">
+    <form method="post">
+        {% csrf_token %}
+        <!--    <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
 
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-            {% if error %}
-                <h4 class="h4 mb-3">{{error}}</h4>
-            {% endif %}
+        <h1 class="h3 mb-3 fw-normal">Регистрация</h1>
+        {% if form.errors %}
+            <ul style="margin-left: 0; padding-left: 0; list-style-type: none; ">
+                {% for error, text in form.errors.items %}
+                    <li><h4 class="h4 mb-3">{{text}}</h4></li>
+                {% endfor %}
+            </ul>
+        {% endif %}
 
-            <div class="form-floating">
-                <input class="form-control" id="floatingInput" placeholder="name@example.com" name="username" value="" required>
-                <label for="floatingInput">Username</label>
+        <div class="row inputs">
+            <div class="col">
+                <div class="form-floating">
+                    <input class="form-control" id="floatingInput" placeholder="name@example.com" name="username"
+                           value="{{ form.data.username }}" required>
+                    <label for="floatingInput">Username</label>
+                </div>
             </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password" required>
-                <label for="floatingPassword">Password</label>
+            <div class="col">
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com"
+                           name="email" value="{{ form.data.email }}" required>
+                    <label for="floatingEmail">Email</label>
+                </div>
             </div>
+        </div>
 
-            <div class="mb-3">
-                <label>
-                    Нет аккаунта? <a class="link-secondary" href="{% url 'user_app:registration_view' %}">Регистрация</a>
-                </label>
-                <label>
-                    Вернуться на <a class="link-secondary" href="{% url 'blog_app:list_view' %}">главную</a> страницу
-                </label>
+        <div class="row inputs">
+            <div class="col">
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword1" placeholder="Password"
+                           name="password1" required>
+                    <label for="floatingPassword1">Password</label>
+                </div>
             </div>
-            <button class="w-100 btn btn-lg btn-secondary" type="submit">Sign in</button>
-            <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
-        </form>
-    </main>
+            <div class="col">
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword2" placeholder="Password"
+                           name="password2" required>
+                    <label for="floatingPassword2">Password again</label>
+                </div>
+            </div>
+        </div>
+
+        <div class="row inputs">
+            <div class="col">
+                <div class="form-floating">
+                    <input class="form-control" id="floatingFirstName" placeholder="name@example.com" name="first_name"
+                           value="{{ form.data.first_name }}">
+                    <label for="floatingFirstName">First Name (Не обязательно)</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-floating">
+                    <input class="form-control" id="floatingLastName" placeholder="name@example.com"
+                           name="last_name" value="{{ form.data.last_name }}">
+                    <label for="floatingLastName">Last Name (Не обязательно)</label>
+                </div>
+            </div>
+        </div>
+
+        <div class="mb-3 width_limit">
+            <label>
+                Есть аккаунт? <a class="link-secondary" href="{% url 'user_app:login_view' %}">Авторизация</a>
+            </label>
+            <label>
+                Вернуться на <a class="link-secondary" href="{% url 'blog_app:list_view' %}">главную</a> страницу
+            </label>
+        </div>
+        <button class="w-100 btn btn-lg btn-secondary width_limit" type="submit">Sign in</button>
+        <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
+    </form>
+</main>
 {% endblock %}
