--- a/blog/blog_app/templates/post/list_post.html
+++ b/blog/blog_app/templates/post/list_post.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-md-8">
       <h3 class="pb-4 mb-4 fst-italic border-bottom">
-        Лента
+        From the Firehose
       </h3>
         {% include 'post/posts.html' %}
 
@@ -22,7 +22,7 @@
     <div class="col-md-4">
       <div class="p-4 mb-3 bg-light rounded">
         <h4 class="fst-italic">О блоге</h4>
-        <p class="mb-0">Блог в котором можно делится новостями, идеями. Или же узнавать что-то <em>новое</em>.</p>
+        <p class="mb-0">Saw you downtown singing the Blues. Watch you circle the drain. Why don't you let me stop by? Heavy is the head that wears the crown. Yes, we make angels cry, raining down on earth from up above.</p>
       </div>
 
       <div class="p-4">
