--- a/blog/blog_app/templates/post/important_post.html
+++ b/blog/blog_app/templates/post/important_post.html
@@ -5,7 +5,7 @@
             <div class="col-md-6 px-0">
                 <h1 class="display-4 fst-italic">{{ post.title }}</h1>
                 <p class="lead my-3">{{ post.body|truncatewords:15}}</p>
-                <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
+                <p class="lead mb-0"><a href="{{ post.get_absolute_url }}" class="text-white fw-bold">Continue reading...</a></p>
             </div>
         </div>
     {% else %}
@@ -17,7 +17,7 @@
                         <h3 class="mb-0">{{ post.title }}</h3>
                         <div class="mb-1 text-muted">{{ post.published_date }}</div>
                         <p class="card-text mb-auto">{{ post.body|truncatewords:8 }}</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
+                        <a href="{{ post.get_absolute_url }}" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
