--- a/blog/blog_app/templates/post/list_post.html
+++ b/blog/blog_app/templates/post/list_post.html
@@ -11,6 +11,7 @@
         From the Firehose
       </h3>
         {% include 'post/posts.html' %}
+        {% include 'post/detail_post.html' %}
 
       <nav class="blog-pagination" aria-label="Pagination">
         <a class="btn btn-outline-primary" href="#">Older</a>
@@ -21,7 +22,7 @@
 
     <div class="col-md-4">
       <div class="p-4 mb-3 bg-light rounded">
-        <h4 class="fst-italic">О блоге</h4>
+        <h4 class="fst-italic">About blog</h4>
         <p class="mb-0">Saw you downtown singing the Blues. Watch you circle the drain. Why don't you let me stop by? Heavy is the head that wears the crown. Yes, we make angels cry, raining down on earth from up above.</p>
       </div>
 
