--- a/blog/blog_app/templates/post/create_post.html
+++ b/blog/blog_app/templates/post/create_post.html
@@ -27,15 +27,21 @@ Create Post
                 <div class="col">
                     <div class="form-floating">
                         <input class="form-control" id="floatingTitle" placeholder="name@example.com" name="title"
-                               value="{{ form.data.title }}" required>
+                               value="{{ form.instance.title }}" required>
                         <label for="floatingTitle">Title</label>
                     </div>
                 </div>
                 <div class="col">
                     <select name="category" class="form-select" aria-label="Категория">
+                        {% if not form.instance.category %}
                         <option selected>Choose category</option>
+                        {% endif %}
                         {% for category in categories %}
+                        {% if category == form.instance.category %}
+                        <option value="{{category.pk}}" selected>{{category}}</option>
+                        {% else %}
                         <option value="{{category.pk}}">{{category}}</option>
+                        {% endif %}
                         {% endfor %}
                     </select>
                 </div>
@@ -44,15 +50,27 @@ Create Post
                 <div class="col">
                     <div class="form-floating">
                             <textarea class="form-control" id="floatingBody" placeholder="name@example.com" name="body"
-                                      required maxlength="5000" style="height: 413px;"></textarea>
+                                      required maxlength="5000"
+                                      style="height: 413px;">{{form.instance.body }}</textarea>
                         <label for="floatingBody">Post text...</label>
                     </div>
                 </div>
             </div>
             <div class="row inputs">
-                <div class="col">
+                <div class="col-3">
                     <button type="submit" class="btn btn-secondary" name="is_publish" value="True">Publish</button>
                     <button type="submit" class="btn btn-light" name="is_publish" value="False">Save</button>
+                </div>
+                <div class="col-9">
+                    {% if request.user.is_staff %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="True" id="flexCheckDefault" name="is_important"
+                        {% if form.instance.is_important %} checked {% endif %}>
+                        <label class="form-check-label" for="flexCheckDefault">
+                            Important
+                        </label>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </form>
