--- a/blog/blog_app/templates/post/posts.html
+++ b/blog/blog_app/templates/post/posts.html
@@ -1,10 +1,15 @@
+{% load static %}
 {% for post in posts %}
     <article class="blog-post">
-        <h2 class="blog-post-title">{{ post.title }}</h2>
+        <h2 class="blog-post-title">{{ post.title }}
+            {% if post.is_important %}
+                <img src="{% static 'blog_app/img/gem.svg' %}" alt="">
+            {% endif %}
+        </h2>
         <p class="blog-post-meta">{{ post.published_date }} <a href="#">{{ post.author }}</a> in {{post.category}}</p>
         <p>{{ post.body }}</p>
         <p><a class="link-secondary" href="{{ post.get_absolute_url }}">Read</a></p>
     </article>
 {% empty %}
-    <p>There is not any posts yet.</p>
+<p>There is not any posts yet.</p>
 {% endfor %}
