--- a/blog/blog_app/templates/base.html
+++ b/blog/blog_app/templates/base.html
@@ -27,8 +27,8 @@
     <link rel="stylesheet" href="{% static 'blog_app/css/forms.css' %}">
 </head>
 
-<body>
-<div class="container">
+<body style="height: 100%;">
+<div class="container content">
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
@@ -64,7 +64,12 @@
     {% endblock%}
 
 </div>
-
+<footer class="blog-footer">
+  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  <p>
+    <a href="#">Back to top</a>
+  </p>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
