--- a/blog/static/blog_app/css/blog.css
+++ b/blog/static/blog_app/css/blog.css
@@ -1,4 +1,14 @@
 /* stylelint-disable selector-list-comma-newline-after */
+html, body{
+  height: 100%;
+}
+body{
+  display: flex;
+  flex-direction: column;
+}
+.content{
+  flex: 1 0 auto;
+}
 
 .blog-header {
   line-height: 1;
@@ -97,6 +107,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   background-color: #f9f9f9;
   border-top: .05rem solid #e5e5e5;
+  flex-shrink: 0;
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
