--- a/blog/blog_app/templates/post/list_post.html
+++ b/blog/blog_app/templates/post/list_post.html
@@ -10,7 +10,7 @@
       <h3 class="pb-4 mb-4 fst-italic border-bottom">
         From the Firehose
       </h3>
-        {% include 'post/posts.html' %}
+        {% include 'posts.html' %}
 
       {% include 'paginator.html' with page=posts %}
 
