--- a/blog/user_app/templates/user/profile.html
+++ b/blog/user_app/templates/user/profile.html
@@ -3,15 +3,20 @@
 <div>
     <main class="container" style="max-width: 75%;">
         <div class="row">
-            <div class="col-10">
+            <div class="col-9">
                 <h3 class="fst-italic">{{ user.username }}</h3>
                 <p><small class="text-muted">{{user.first_name}} {{ user.last_name }}</small></p>
                 <p>Date joined: {{user.date_joined}}</p>
             </div>
-            <div class="col-2">
+            <div class="col-3">
                 <button class="btn btn-secondary"><a href="{% url 'user_app:update_personal_info_view'%}"
-                                                     class="link-light" style="text-decoration: none;">Change
-                    info</a></button>
+                                                     class="link-light" style="text-decoration: none;">
+                    Change info</a></button>
+
+                <button class="btn btn-secondary" style="margin-top: 10px;">
+                    <a href="{% url 'user_app:change_password_view' user.pk %}"
+                                                     class="link-light" style="text-decoration: none;">
+                    Change password</a></button>
             </div>
         </div>
         <hr>
