--- a/blog/user_app/templates/registration/registration.html
+++ b/blog/user_app/templates/registration/registration.html
@@ -75,7 +75,7 @@
                 Got back to <a class="link-secondary" href="{% url 'blog_app:list_view' %}">main</a> page
             </label>
         </div>
-        <button class="w-100 btn btn-lg btn-secondary width_limit" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-secondary width_limit" type="submit">Sign up</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
     </form>
 </main>
