Fix wrong word breaking

--- a/blog/blog_app/templates/post/detail_post.html
+++ b/blog/blog_app/templates/post/detail_post.html
@@ -7,10 +7,10 @@
     <main class="container">
         <div class="row">
             <div class="col-10">
-                <article class="blog-post">
-                    <h2 class="blog-post-title">{{ post.title }}</h2>
+                <article class="blog-post ">
+                    <h2 class="blog-post-title wrapping_words">{{ post.title }}</h2>
                     <hr>
-                    <p>{{ post.body }}</p>
+                    <p class="wrapping_words">{{ post.body }}</p>
                 </article>
             </div>
             <div class="col-2">
