--- a/blog/blog_app/templates/post/important_post.html
+++ b/blog/blog_app/templates/post/important_post.html
@@ -3,8 +3,8 @@
     {% if forloop.first %}
         <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
             <div class="col-md-6 px-0">
-                <h1 class="display-4 fst-italic">{{ post.title }}</h1>
-                <p class="lead my-3">{{ post.body|truncatewords:15}}</p>
+                <h1 class="display-4 fst-italic wrapping_words">{{ post.title }}</h1>
+                <p class="lead my-3 wrapping_words">{{ post.body|truncatewords:7}}</p>
                 <p class="lead mb-0"><a href="{{ post.get_absolute_url }}" class="text-white fw-bold">Continue reading...</a></p>
             </div>
         </div>
@@ -19,10 +19,7 @@
                         <p class="card-text mb-auto">{{ post.body|truncatewords:8 }}</p>
                         <a href="{{ post.get_absolute_url }}" class="stretched-link">Continue reading</a>
                     </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
-                    </div>
                 </div>
             </div>
     {% endif %}
