--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -6,7 +6,8 @@
                 <img src="{% static 'blog_app/img/gem.svg' %}" alt="">
             {% endif %}
         </h2>
-        <p class="blog-post-meta">{{ post.published_date }} <a href="#">{{ post.author }}</a> in {{post.category}}</p>
+        <p class="blog-post-meta">{{ post.published_date }}
+            <a href="{% url 'user_app:profile_view' post.author.pk %}">{{ post.author }}</a> in {{post.category}}</p>
         <p class="wrapping_words">{{ post.body }}</p>
         <p><a class="link-secondary" href="{{ post.get_absolute_url }}">Read</a></p>
     </article>
