--- a/blog/blog_app/templates/post/detail_post.html
+++ b/blog/blog_app/templates/post/detail_post.html
@@ -20,7 +20,7 @@
                 {% if post.is_important %}
                     <h4 class="fst-italic">Important</h4>
                 {% endif %}
-                <h4>{{ post.author }}</h4>
+                <h4><a class="link-secondary" href="{% url 'user_app:profile_view' post.author.pk %}">{{ post.author }}</a></h4>
                 <p>Published: <strong> {{ post.published_date }}</strong></p>
                 Category: <strong>{{ post.category }}</strong>
                 {% if post.author == request.user or request.user.is_staff %}
