--- a/blog/blog_app/templates/post/list_post.html
+++ b/blog/blog_app/templates/post/list_post.html
@@ -3,48 +3,58 @@
 {% block content %}
 <div>
     <main class="container">
-      {% include 'post/important_post.html' %}
+        {% include 'post/important_post.html' %}
 
-  <div class="row">
-    <div class="col-md-8">
-      <h3 class="pb-4 mb-4 fst-italic border-bottom">
-        From the Firehose
-      </h3>
-        {% include 'posts.html' %}
+        <div class="row">
+            <div class="col-md-8">
+                <h3 class="pb-4 mb-4 fst-italic border-bottom">
+                    From the Firehose
+                </h3>
+                {% include 'posts.html' %}
 
-      {% include 'paginator.html' with page=posts %}
+                {% include 'paginator.html' with page=posts %}
 
-    </div>
+            </div>
 
-    <div class="col-md-4">
-      <div class="p-4 mb-3 bg-light rounded">
-        <h4 class="fst-italic">About blog</h4>
-        <p class="mb-0">Saw you downtown singing the Blues. Watch you circle the drain. Why don't you let me stop by? Heavy is the head that wears the crown. Yes, we make angels cry, raining down on earth from up above.</p>
-      </div>
+            <div class="col-md-4">
+                <div class="p-4 mb-3 bg-light rounded">
+                    <h4 class="fst-italic">About blog</h4>
+                    <p class="mb-0">Saw you downtown singing the Blues. Watch you circle the drain. Why don't you let me
+                        stop by? Heavy is the head that wears the crown. Yes, we make angels cry, raining down on earth
+                        from up above.</p>
+                </div>
 
-      <div class="p-4">
-        <h4 class="fst-italic">Archives</h4>
-        <ol class="list-unstyled mb-0">
-          <li><a href="{% url 'blog_app:list_archive_view' 2021 %}">2021</a></li>
-          <li><a href="{% url 'blog_app:list_archive_view' 2020 %}">2020</a></li>
-          <li><a href="{% url 'blog_app:list_archive_view' 2019 %}">2019</a></li>
-          <li><a href="{% url 'blog_app:list_archive_view' 2018 %}">2018</a></li>
-          <li><a href="{% url 'blog_app:list_archive_view' 2017 %}">2017</a></li>
-        </ol>
-      </div>
+                <div class="p-4">
+                    <h4 class="fst-italic">Archives</h4>
+                    <ol class="list-unstyled mb-0">
+                        {% if current_category %}
+                        <li><a href="{% url 'blog_app:list_archive_category_view' 2021 current_category%}">2021</a></li>
+                        <li><a href="{% url 'blog_app:list_archive_category_view' 2020 current_category%}">2020</a></li>
+                        <li><a href="{% url 'blog_app:list_archive_category_view' 2019 current_category%}">2019</a></li>
+                        <li><a href="{% url 'blog_app:list_archive_category_view' 2018 current_category%}">2018</a></li>
+                        <li><a href="{% url 'blog_app:list_archive_category_view' 2017 current_category%}">2017</a></li>
+                        {% else %}
+                        <li><a href="{% url 'blog_app:list_archive_view' 2021 %}">2021</a></li>
+                        <li><a href="{% url 'blog_app:list_archive_view' 2020 %}">2020</a></li>
+                        <li><a href="{% url 'blog_app:list_archive_view' 2019 %}">2019</a></li>
+                        <li><a href="{% url 'blog_app:list_archive_view' 2018 %}">2018</a></li>
+                        <li><a href="{% url 'blog_app:list_archive_view' 2017 %}">2017</a></li>
+                        {% endif %}
+                    </ol>
+                </div>
 
-      <div class="p-4">
-        <h4 class="fst-italic">Elsewhere</h4>
-        <ol class="list-unstyled">
-          <li><a href="https://github.com/Chenger1">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Facebook</a></li>
-        </ol>
-      </div>
-    </div>
+                <div class="p-4">
+                    <h4 class="fst-italic">Elsewhere</h4>
+                    <ol class="list-unstyled">
+                        <li><a href="https://github.com/Chenger1">GitHub</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Facebook</a></li>
+                    </ol>
+                </div>
+            </div>
 
-  </div>
+        </div>
 
-</main>
+    </main>
 </div>
 {% endblock %}
