--- a/blog/templates/list_comments.html
+++ b/blog/templates/list_comments.html
@@ -2,7 +2,7 @@
     <strong class="fst-italic">
         <a class="link-secondary" href="{% url 'user_app:profile_view' comment.author.pk %}">{{ comment.author }}</a>
     </strong>
-    {% if request.user == comment.author %}
+    {% if request.user == comment.author or request.user.is_staff %}
     <button class="comment_button" type="button" id="dropdownMenuButton1"
             data-bs-toggle="dropdown" aria-expanded="false">
         <strong>...</strong>
