--- a/blog/user_app/templates/registration/update_info.html
+++ b/blog/user_app/templates/registration/update_info.html
@@ -42,6 +42,15 @@
                 </div>
             </div>
         </div>
+        <div class="row inputs">
+            <div class="col">
+                <div class="form-floating">
+                    <textarea name="extended_info" cols="30" rows="10" class="form-control" id="extendedInfo"
+                    placeholder="name@example.com" style="height: 200px; resize: none;">{{ form.instance.extended_info }}</textarea>
+                    <label for="extendedInfo">Describes yourself</label>
+                </div>
+            </div>
+        </div>
 
         <div class="mb-3 width_limit">
             <label>
