--- a/blog/user_app/templates/user/profile.html
+++ b/blog/user_app/templates/user/profile.html
@@ -7,17 +7,20 @@
                 <h3 class="fst-italic">{{ user.username }}</h3>
                 <p><small class="text-muted">{{user.first_name}} {{ user.last_name }}</small></p>
                 <p>Date joined: {{user.date_joined}}</p>
+                    {% if user.extended_info %}
+                        {% include 'user/accordion.html' %}
+                    {% endif %}
             </div>
             {% if request.user == user %}
             <div class="col-3">
-                <button class="btn btn-secondary"><a href="{% url 'user_app:update_personal_info_view'%}"
-                                                     class="link-light" style="text-decoration: none;">
-                    Change info</a></button>
+               <a href="{% url 'user_app:update_personal_info_view'%}"
+                                                     class="btn btn-secondary" style="text-decoration: none;">
+                    Change info</a>
 
-                <button class="btn btn-secondary" style="margin-top: 10px;">
+
                     <a href="{% url 'user_app:change_password_view' user.pk %}"
-                       class="link-light" style="text-decoration: none;">
-                        Change password</a></button>
+                       class="btn btn-secondary" style="text-decoration: none; margin-top: 10px;">
+                        Change password</a>
             </div>
             {% elif request.user.is_staff %}
                 <div class="col-3">
@@ -49,13 +52,15 @@
         <div class="row">
             <div class="col posts">
                 {% if current_page == 'comments' %}
-                {% for obj in objs %}
-                <a class="link-secondary" href="{{ obj.post.get_absolute_url }}">{{ obj.post.title }}</a>
-                {% include 'list_comments.html' with comment=obj %}
-                {% include 'modal.html' with comment=obj %}
-                {% endfor %}
+                    {% for obj in objs %}
+                        <a class="link-secondary" href="{{ obj.post.get_absolute_url }}">{{ obj.post.title }}</a>
+                        {% include 'list_comments.html' with comment=obj %}
+                        {% include 'modal.html' with comment=obj %}
+                    {% empty %}
+                        <p>There is not any comments yet.</p>
+                    {% endfor %}
                 {% else %}
-                {% include 'posts.html' with posts=objs %}
+                    {% include 'posts.html' with posts=objs %}
                 {% endif %}
             </div>
         </div>
