--- a/blog/user_app/templates/user/profile.html
+++ b/blog/user_app/templates/user/profile.html
@@ -43,7 +43,8 @@
                     id="saved">Saved</a>
                     <a class="nav-link" href="{% url 'user_app:profile_comments_view' user.pk%}"
                        {% if current_page == 'comments' %}style="border: 1px solid;" {% endif %}>Comments</a>
-                    <a class="nav-link" href="#">Disabled</a>
+                    <a class="nav-link" href="{% url 'user_app:profile_favorites_view' user.pk%}"
+                        {% if current_page == 'favorites' %}style="border: 1px solid;" {% endif %}>Favorites</a>
                     {% endif %}
                 </nav>
             </div>
