--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -1,16 +1,20 @@
 {% load static %}
 {% for post in posts %}
     <article class="blog-post">
-        <h2 class="blog-post-title wrapping_words">{{ post.title }}
+        <h2 class="blog-post-title wrapping_words">{{ post.title|truncatewords:50}}
             {% if post.is_important %}
                 <img src="{% static 'blog_app/img/gem.svg' %}" alt="">
             {% endif %}
         </h2>
         <p class="blog-post-meta">{{ post.published_date }}
             <a href="{% url 'user_app:profile_view' post.author.pk %}">{{ post.author }}</a> in {{post.category}}</p>
-        <p class="wrapping_words">{{ post.body }}</p>
+        <p class="wrapping_words">{{ post.body|truncatewords:50 }}</p>
         <p><a class="link-secondary" href="{{ post.get_absolute_url }}">Read</a></p>
     </article>
 {% empty %}
-<p>There is not any posts yet.</p>
+    {% if not search %}
+        <p>There is not any posts yet.</p>
+    {% else %}
+        <p>You will results here</p>
+    {% endif %}
 {% endfor %}
