--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -4,23 +4,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
         }
-      }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'blog_app/css/blog.css' %}">
@@ -29,48 +30,81 @@
 
 <body style="height: 100%;">
 <div class="container content">
-  <header class="blog-header py-3">
-    <div class="row flex-nowrap justify-content-between align-items-center">
-      <div class="col-4 pt-1">
-        <a class="link-secondary" href="{% url 'blog_app:search_view' %}" aria-label="Search">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-        </a>
-      </div>
-      <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="{% url 'blog_app:list_view' %}">Blog</a>
-      </div>
-      <div class="col-4 d-flex justify-content-end align-items-center">
-          {% if request.user.is_authenticated %}
-            <a class="link-secondary" href="{% url 'user_app:profile_view' request.user.pk %}" style="margin-right: 20px;">{{ request.user }}</a>
-            <a class="link-secondary" href="{% url 'blog_app:create_post_view' %}" style="margin-right: 20px;">Create Post</a>
-            <a class="btn btn-sm btn-outline-secondary" href="{% url 'user_app:logout_view' %}">Sign out</a>
-          {% else %}
-            <a class="btn btn-sm btn-outline-secondary" href="{% url 'user_app:login_view' %}">Sign in</a>
-          {% endif %}
-      </div>
-    </div>
-  </header>
+    <header class="blog-header py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+            <div class="col-4 pt-1">
+                <div class="row search_block" style="align-items: center;" id="searchBlock">
+                    <div class="col-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                         stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img"
+                         viewBox="0 0 24 24"><title>Search</title>
+                        <circle cx="10.5" cy="10.5" r="7.5"/>
+                        <path d="M21 21l-5.2-5.2"/>
+                    </svg>
+                    </div>
+                    <div class="col-10">
+                        <form action="{% url 'blog_app:search_view' %}" method="get">
+                        <input type="text" name="query" placeholder="Search..." id="searchInput"
+                               class="search_input">
+                        </form>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-4 text-center">
+                <a class="blog-header-logo text-dark" href="{% url 'blog_app:list_view' %}">Blog</a>
+            </div>
+            <div class="col-4 d-flex justify-content-end align-items-center">
+                {% if request.user.is_authenticated %}
+                <a class="link-secondary" href="{% url 'user_app:profile_view' request.user.pk %}"
+                   style="margin-right: 20px;">{{ request.user }}</a>
+                <a class="link-secondary" href="{% url 'blog_app:create_post_view' %}" style="margin-right: 20px;">Create
+                    Post</a>
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'user_app:logout_view' %}">Sign out</a>
+                {% else %}
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'user_app:login_view' %}">Sign in</a>
+                {% endif %}
+            </div>
+        </div>
+    </header>
 
     <div class="nav-scroller py-1 mb-2">
-    <nav class="nav d-flex justify-content-between">
-        {% for category in categories %}
+        <nav class="nav d-flex justify-content-between">
+            {% for category in categories %}
             <a class="p-2 link-secondary" href="{% url 'blog_app:list_category_view' category.pk %}">{{ category }}</a>
-        {% endfor %}
-    </nav>
-  </div>
+            {% endfor %}
+        </nav>
+    </div>
 
     {% block content %}
-        <h1>There is no any content now</h1>
+    <h1>There is no any content now</h1>
     {% endblock%}
 
 </div>
 <footer class="blog-footer">
-  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-  <p>
-    <a href="#">Back to top</a>
-  </p>
+    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.
+    </p>
+    <p>
+        <a href="#">Back to top</a>
+    </p>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
+<script>
+    const search_input = document.getElementById('searchInput')
+    const search_block = document.getElementById('searchBlock')
+    search_input.addEventListener('focus', function (){
+        search_input.style.backgroundColor = 'white';
+        search_block.style.backgroundColor = 'white';
+    })
+    search_input.addEventListener('blur', function (){
+        search_input.style.backgroundColor = '#f2f2f2';
+        search_block.style.backgroundColor = '#f2f2f2';
+    })
+</script>
+
 </html>
