--- a/blog/blog_app/templates/post/important_post.html
+++ b/blog/blog_app/templates/post/important_post.html
@@ -1,10 +1,11 @@
+{% load mark_tag %}
 <div class="row mb-2">
 {% for post in important_posts %}
     {% if forloop.first %}
         <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
             <div class="col-md-6 px-0">
                 <h1 class="display-4 fst-italic wrapping_words">{{ post.title }}</h1>
-                <p class="lead my-3 wrapping_words">{{ post.body|truncatewords:15}}</p>
+                <p class="lead my-3 wrapping_words">{{ post.body|markdown_to_text|truncatewords:15}}</p>
                 <p class="lead mb-0"><a href="{{ post.get_absolute_url }}" class="text-white fw-bold">Continue reading...</a></p>
             </div>
         </div>
@@ -16,7 +17,7 @@
                         <strong class="d-inline-block mb-2 text-primary">{{ post.category }}</strong>
                         <h3 class="mb-0">{{ post.title|truncatewords:10 }}</h3>
                         <div class="mb-1 text-muted">{{ post.published_date }}</div>
-                        <p class="card-text mb-auto">{{ post.body|truncatewords:15 }}</p>
+                        <p class="card-text mb-auto">{{ post.body|markdown_to_text|truncatewords:15 }}</p>
                         <a href="{{ post.get_absolute_url }}" class="stretched-link">Continue reading</a>
                     </div>
 
