Add filtering for list_post_admin page

--- a/blog/django_admin/templates/admin_base.html
+++ b/blog/django_admin/templates/admin_base.html
@@ -18,6 +18,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <link rel="stylesheet" href="{% static 'django-admin/plugins/fontawesome-free/css/all.min.css' %}">
     <!-- Theme style -->
     <link rel="stylesheet" href="{% static 'django-admin/dist/css/adminlte.min.css' %}">
+    <link rel="stylesheet" href="{% static 'django-admin/css/django-admin.css' %}">
 </head>
 <body class="hold-transition sidebar-mini sidebar-collapse">
 <div class="wrapper">
