Add pagination page for admin panel

--- a/blog/django_admin/templates/blog_app/post/list_posts.html
+++ b/blog/django_admin/templates/blog_app/post/list_posts.html
@@ -98,6 +98,11 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col">
+        {%  include 'pagination.html' with page=posts %}
+    </div>
+</div>
 
 <script src="{% static 'django-admin/js/checkbox_toggle.js' %}"></script>
 {% endblock %}
